Test Data/BPP/BPP-MELA/outputs/bpp-black_box/2025-07-19_18-51-19/problem_iter1_stdout_18_cand0.txt
Traceback (most recent call last):
  File "C:\Users\22973\Desktop\meevo-main\meevo/evaluators/bpp/main.py", line 9, in <module>
    import gpt
  File "C:\Users\22973\Desktop\meevo-main\meevo\evaluators\bpp\gpt.py", line 11
    heuristic = 1/(sizes.reshape(-1,1) + 1e-10
                  ^
SyntaxError: '(' was never closed
